--- a/gymAPI/requirements.txt
+++ b/gymAPI/requirements.txt
@@ -4,6 +4,14 @@ asttokens==2.0.5
 async-timeout==4.0.2
 backcall==0.2.0
 backports.zoneinfo==0.2.1
+black==22.6.0
+click==8.1.3
+Django==4.1
+django-extensions==3.2.0
+djangorestframework==3.13.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.5.2
 billiard==3.6.4.0
 celery==5.2.7
 click==8.1.3
@@ -39,6 +47,8 @@ pytz==2022.1
 redis==4.3.4
 six==1.16.0
 sqlparse==0.4.2
+tomli==2.0.1
+typing-extensions==4.3.0
 stack-data==0.3.0
 traitlets==5.3.0
 vine==5.0.0
