added google social authentication

--- a/gymAPI/gymAPI/.env
+++ b/gymAPI/gymAPI/.env
@@ -1,3 +1,6 @@
 EMAIL_HOST=smtp.gmail.com
 EMAIL_HOST_USER=the.ink.spot117@gmail.com
 EMAIL_HOST_PASSWORD=hrjdyzyiddyeyiyd
+export GOOGLE_CLIENT_ID=407408718192.apps.googleusercontent.com
+export GOOGLE_CLIENT_SECRET=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
+export SOCIAL_SECRET=FG54555sdFs5556DS
