--- a/gymAPI/requirements.txt
+++ b/gymAPI/requirements.txt
@@ -18,6 +18,7 @@ click-repl==0.2.0
 decorator==5.1.1
 Deprecated==1.2.13
 Django==4.1
+django-cors-headers==3.13.0
 django-environ==0.9.0
 django-extensions==3.2.0
 django-money==3.0.0
