--- a/gymAPI/requirements.txt
+++ b/gymAPI/requirements.txt
@@ -2,6 +2,9 @@ amqp==5.1.1
 asgiref==3.5.2
 asttokens==2.0.5
 async-timeout==4.0.2
+attrs==22.1.0
+autobahn==22.7.1
+Automat==20.2.0
 Babel==2.10.3
 backcall==0.2.0
 backports.zoneinfo==0.2.1
@@ -10,11 +13,15 @@ black==22.6.0
 cachetools==5.2.0
 celery==5.2.7
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+constantly==15.1.0
+cryptography==37.0.4
+daphne==3.0.2
 decorator==5.1.1
 Deprecated==1.2.13
 Django==4.1
@@ -35,7 +42,9 @@ google-auth==2.10.0
 google-auth-httplib2==0.1.0
 googleapis-common-protos==1.56.4
 httplib2==0.20.4
+hyperlink==21.0.0
 idna==3.3
+incremental==21.3.0
 ipython==8.4.0
 ishell==0.1.8
 jedi==0.18.1
@@ -57,22 +66,28 @@ pure-eval==0.2.2
 py-moneyed==2.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.21
 Pygments==2.12.0
 PyJWT==2.4.0
+pyOpenSSL==22.0.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.1
 redis==4.3.4
 requests==2.28.1
 rsa==4.9
+service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.2
 stack-data==0.3.0
 tomli==2.0.1
 traitlets==5.3.0
+Twisted==22.4.0
+txaio==22.2.1
 typing-extensions==4.3.0
 uritemplate==4.1.1
 urllib3==1.26.11
 vine==5.0.0
 wcwidth==0.2.5
 wrapt==1.14.1
+zope.interface==5.4.0
