--- a/gymAPI/requirements.txt
+++ b/gymAPI/requirements.txt
@@ -69,6 +69,7 @@ pyasn1-modules==0.2.8
 pycparser==2.21
 Pygments==2.12.0
 PyJWT==2.4.0
+pymemcache==3.5.2
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
