--- a/gymAPI/requirements.txt
+++ b/gymAPI/requirements.txt
@@ -20,10 +20,13 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 constantly==15.1.0
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==37.0.4
 daphne==3.0.2
 decorator==5.1.1
 Deprecated==1.2.13
+dj-database-url==1.0.0
 Django==4.1
 django-cors-headers==3.13.0
 django-environ==0.9.0
@@ -31,6 +34,7 @@ django-extensions==3.2.0
 django-money==3.0.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
+drf-yasg==1.21.3
 environ==1.0
 executing==0.9.1
 Faker==13.15.1
@@ -45,10 +49,14 @@ httplib2==0.20.4
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
+inflection==0.5.1
 ipython==8.4.0
 ishell==0.1.8
+itypes==1.2.0
 jedi==0.18.1
+Jinja2==3.1.2
 kombu==5.2.4
+MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
 mypy-extensions==0.4.3
 packaging==21.3
@@ -77,6 +85,8 @@ pytz==2022.1
 redis==4.3.4
 requests==2.28.1
 rsa==4.9
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.2
@@ -90,5 +100,6 @@ uritemplate==4.1.1
 urllib3==1.26.11
 vine==5.0.0
 wcwidth==0.2.5
+whitenoise==6.2.0
 wrapt==1.14.1
 zope.interface==5.4.0
